objects/ASI_MFM_Event_Outlet__c.object
<CustomObject>
    <description>ASI_MFM_Event_Outlet
To indicate the outlets selected for a event</description>
    <fields>
        <fullName>ASI_CRM_BeginningDateTODELETE__c</fullName>
        <formula>ASI_MFM_Event__r.ASI_MFM_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beginning Date TODELETE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_EvaluationCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>ASI_CRM_EventOutlet_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EndDate__c</fullName>
        <formula>ASI_MFM_Event__r.ASI_MFM_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StartDate__c</fullName>
        <formula>ASI_MFM_Event__r.ASI_MFM_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WeekDays__c</fullName>
        <label>Week Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Beginning_Date__c</fullName>
        <label>Beginning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Event Outlets</relationshipLabel>
        <relationshipName>Event_Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CRM_Code__c</fullName>
        <label>CRM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Completed__c</fullName>
        <formula>OR(today()&gt; ASI_MFM_End_Date__c, AND(year(today())=year(ASI_MFM_End_Date__c), month(today())=month(ASI_MFM_End_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_EXID__c</fullName>
        <externalId>true</externalId>
        <label>EXID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image/Brand Driven Event</fullName>
                </value>
                <value>
                    <fullName>Thematic Promotion</fullName>
                </value>
                <value>
                    <fullName>Vol. Promotion</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Consumer Trail</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Trade Fair</fullName>
                </value>
                <value>
                    <fullName>Commando</fullName>
                </value>
                <value>
                    <fullName>Image Event</fullName>
                </value>
                <value>
                    <fullName>Luxe Event</fullName>
                </value>
                <value>
                    <fullName>NPL Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event__c</fullName>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>Event Outlets</relationshipLabel>
        <relationshipName>Event_Outlets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ID_For_Calendar__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID (For Calendar)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Is_Main_Event__c</fullName>
        <formula>TEXT(ASI_MFM_Event_Type__c) =  TEXT(ASI_MFM_Event__r.ASI_MFM_Event_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Main Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Outlets</relationshipLabel>
        <relationshipName>Event_Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Wave__c</fullName>
        <label>Wave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Outlet</label>
    <nameField>
        <displayFormat>EVENT-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Outlets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_EventOutlet</fullName>
        <active>true</active>
        <label>VN Event Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Event_Outlet</fullName>
        <active>true</active>
        <label>CN Event Outlet</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_CN_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_MFM_End_Date__c &lt;  ASI_MFM_Beginning_Date__c</errorConditionFormula>
        <errorMessage>“End Date” should not smaller than “Start Date”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CN_Event_Type_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( ASI_MFM_Event_Type__c)==&apos;&apos;, RecordType.DeveloperName == &apos;ASI_MFM_CN_Event_Outlet&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Event_Type__c</errorDisplayField>
        <errorMessage>Event Type is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Event_Outlet_Date_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ASI_MFM_Event__r.ASI_MFM_Start_Date__c &gt;  ASI_MFM_Beginning_Date__c, 
ASI_MFM_Event__r.ASI_MFM_Start_Date__c &gt; ASI_MFM_Event__r.ASI_MFM_End_Date__c,
ASI_MFM_Event__r.ASI_MFM_End_Date__c  &lt; ASI_MFM_End_Date__c,ASI_MFM_Event__r.ASI_MFM_End_Date__c &lt;  ASI_MFM_Beginning_Date__c)</errorConditionFormula>
        <errorMessage>The Start/End date for outlet should be in the range of Event Start/End date</errorMessage>
    </validationRules>
</CustomObject>